--- a/research report.tex
+++ b/research report.tex
@@ -8,9 +8,13 @@
 \tableofcontents
 \newpage
 \section{Introduction}
-\section{Technical chapter
+Force-directed graph drawing has been one of the most widely used algorithms out there since...
+\section{Technical chapter}
+First, some technical terms that we'll be using throughout the rest of this paper...
 \section{Main text}
+Zhu Li, we did the thing!
 \section{Conclusions}
+These are our conclusions based on the results we found.
 \begin{thebibliography}{99}
 \end{thebibliography}
 
