Paginanummers in slide

--- a/non-code/presentatie.tex
+++ b/non-code/presentatie.tex
@@ -1,14 +1,21 @@
 \documentclass[16pt]{beamer}
 %Gummi|065|=)
 \title{\textbf{Force directed graph drawing}}
+\usetheme{Berlin}
+\usecolortheme{beaver}
 \author{Roxanne Giling\\
 		Laurens Post\\
 		Jeroen Hoegen Dijkhof}
 \date{}
+
+\expandafter\def\expandafter\insertshorttitle\expandafter{%
+  \insertshorttitle\hfill%
+  \textbf{\insertframenumber}\,/\,\inserttotalframenumber}
+
 \begin{document}
 
 \begin{frame}
-    \frametitle{\maketitle}
+    \titlepage
 \end{frame}
 
 \begin{frame}
