--- a/non-code/presentatie.tex
+++ b/non-code/presentatie.tex
@@ -90,6 +90,15 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{Ons onderzoek}
+    \begin{itemize}
+        \item{Zelfgeschreven code}
+        \item{C\# code}
+        \item{Ingebouwde timers}
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
     \frametitle{Testdata}
     \begin{itemize}
         \item{Internet routing table}
@@ -122,6 +131,7 @@
         \end{itemize}
     \end{itemize}
 \end{frame}
+
 
 \begin{frame}
     \frametitle{Vragen}
