--- a/research report.tex
+++ b/research report.tex
@@ -4,7 +4,7 @@
 \begin{document}
 
 \title{Force Directed Graph Drawing algorithms}
-\author{Group Charlie-5: Jeroen Hoegen Dijkhof \and Roxanne Giling \and Laurens Post \and Roel Schipper}
+\author{Group Charlie-5: Jeroen Hoegen Dijkhof \and Roxanne Giling \and Laurens Post}
 \maketitle
 \begin{abstract}
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin posuere leo sed enim congue, vel dignissim justo pharetra. Curabitur eleifend interdum quam, eget ultrices sem ornare nec. Vivamus posuere sapien nec posuere aliquet.
