--- a/research report.tex
+++ b/research report.tex
@@ -16,7 +16,11 @@ Force-directed graph drawing is a useful tool for displaying graphs in a neat an
 Force-directed graph drawing has been one of the most flexible and widely used algorithms out there since 1963 with one of the first versions being that of ~Tutte~\cite{Tutte}. These algorithms are used to represent graphs so that they are pleasing to look at. This is done by spacing out the vertices from each-other so that they are clearly visible as separate vertices, but they are also not too spaced out to avoid the resulting image being too big. The algorithms are based on the idea of springs or magnets in that each vertex has both a repulsive as well as an attractive force pulling and pushing on them. Ideally, this makes two vertices spaced out in such a way that these two forces hang in balance with each-other. As a graph grows in size, so does its complexity. Lines may cross with one-another or connected vertices may find themselves stretched out on either side of the initial graph. In our research we have found several different versions in order to handle this increase in complexity, each with their own ideas on how to compute these two forces. Tutte as mentioned above uses a graph's Barycentric representation while others, such as that of Kamada and ~Kawai~\cite{Kawai}, use the theoretic distances of paths in the graph from one vertex to another in order to compute their spring forces. We have gotten most of our information from Kobourov\cite{Kobourov}, including the algorithm that we ended up using as described below in section \ref{s:algorithm}.
 
 \section{Research question}
-We soon found the algorithm that we wanted to work with. Namely that of Eades. This algorithm was designed in the year 1984. The algorithm has limits and (after Eades' research) predetermined constants. Since then we have of course enjoyed a lot of improvements in the speed of our computers. Our research question is thus as follows: Is the research done for the Eades algorithm still relevant to today's standard in technology?
+We soon found the algorithm that we wanted to work with. Namely that of Eades. This algorithm was designed in the year 1984. The algorithm has limits and (after Eades' research) predetermined constants. Since then we have of course enjoyed a lot of improvements in the speed of our computers. Our research question is thus as follows: Is the research done for the Eades algorithm still relevant to today's standard in technology? In order to answer this question we have divided this question up into sub-questions:
+\begin{itemize}
+\item What happens if we change up some of the constants of the algorithm?
+\item What happens when we increase the number of vertices in the graph?
+\end{itemize}
 
 \section{Description of the experiments}
 As stated above, our research took us through many different versions of force directed graph drawing and there were many different kinds of results that we could go for. Below we will describe what we used exactly, how we used it and what kinds of results we wanted to receive as output data.
